[package]
name = "exchange-connector"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.80"
compact_str = { version = "0.8.0-beta", features = ["serde"] }
derive_more = {version = "1.0.0-beta.6", features = ["full"]}
eyre = "0.6.12"
fixnum = { version = "0.9.2", features = ["i128", "serde"] }
http = "1.1.0"
log = "0.4.21"
log4rs = "1.3.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_urlencoded = "0.7.1"
slotmap = "1.0.7"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls", "connect"] }
futures-util = "0.3.30"
